added config change test